--- a/arqsoftware.html
+++ b/arqsoftware.html
@@ -3,22 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>Arquiteto de Soluções</title>
-  <link rel="stylesheet" type="text/css"  href="_css/inicio.css">
+  <link rel="stylesheet" type="text/css"  href="arqsoftware.css">
 </head>
 <body>
-      <img id="icone" src="-ti-logo-.jpg" width="250px"/>
+      <div id="interface">
 
-    <h1>Profissões na área de T.I.</h1>
+            <header id="cabecalho">
 
-    <div class="menu">
+            <img id="icone" src="-ti-logo-.jpg"
+        width="200px"/>
+
+
+        <nav id="menu">
+
+            <h1>Menu Principal</h1>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="dessoftware.html">Desenvolvedor de Software</a></li>
                 <li><a href="engesoft.html">Engenheiro de Software</a></li>
-                <li><a href="arqusoft.html">Arquiteto de Software</a></li>
+                <li><a href="arqsoftware.html">Arquiteto de Soluções</a></li>
                 <li><a href="fale-conosco.html">Fale Conosco</a></li>
+                <li><a href="autor.html">Autor</a></li>
             </ul>
-        </div>
+        </nav>
+            </header>
 
       <h2>Arquiteto de Soluções</h2>
         <img src="arquitetura-de-solucoes.jpg" width="300">
