--- a/autor.html
+++ b/autor.html
@@ -2,24 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+     <link rel="stylesheet" type="text/css"  href="autor.css">
+</head>
+
+    <body>
     <title>Autor</title>
 </head>
 
-    <img src="-ti-logo-.jpg" width="250px">
+    <div id="interface">
 
-<body>
+            <header id="cabecalho">
 
-    <h1>Profissões na área de T.I.</h1>
+            <img id="icone" src="-ti-logo-.jpg"
+        width="200px"/>
 
-        <div class="menu">
+
+
+        <nav id="menu">
+
+            <h1>Menu Principal</h1>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="dessoftware.html">Desenvolvedor de Software</a></li>
                 <li><a href="engesoft.html">Engenheiro de Software</a></li>
-                <li><a href="arqusoft.html">Arquiteto de Software</a></li>
+                <li><a href="arqsoftware.html">Arquiteto de Soluções</a></li>
                 <li><a href="fale-conosco.html">Fale Conosco</a></li>
+                <li><a href="autor.html">Autor</a></li>
             </ul>
-        </div>
+        </nav>
+            </header>
 
         <h2>. Autor</h2>
       <p>Bom eu sou Rodrigo, tenho 15 anos, curso T.I, e esse é o primeiro site que eu criei sozinho.</p>
