--- a/dessoftware.html
+++ b/dessoftware.html
@@ -3,24 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <title>Desenvolvedor de Software</title>
-    <link rel="stylesheet" type="text/css"  href="_css/dessoftware.css">
+    <link rel="stylesheet" type="text/css"  href="dessoftware.css">
 </head>
 <body>
-    <img src="-ti-logo-.jpg"
-    width="150px"/>
 
-    <div id="interface">
+        <div id="interface">
 
         <header id="cabecalho">
-        <hgroup>
-    <h1>Desenvolvedor de Software</h1>
-        <img src="Capas_arte_4.jpg">
 
-        <h2>Atividades de Trabalho</h2>
+    <img id="icone" src="-ti-logo-.jpg"
+    width="300px"/>
+
+        <nav id="menu">
+<ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="dessoftware.html">Desenvolvedor de Software</a></li>
+                <li><a href="engesoft.html">Engenheiro de Software</a></li>
+                <li><a href="arqsoftware.html">Arquiteto de Soluções</a></li>
+                <li><a href="fale-conosco.html">Fale Conosco</a></li>
+                <li><a href="autor.html">Autor</a></li>
+    </ul>
+        </nav>
+        </header>
+
+
+
+        <hgroup>
+            <h1>Desenvolvedor de Software</h1>
+                <br>
+
+            <h2>Atividades de Trabalho</h2>
             <p>Ele pode criar aplicativos, programas, sistemas e outras soluções de software para os mais variados fins e indústrias.</p>
+                <br>
 
             <h2>Conhecimentos Necessários</h2>
 <p>São conhecimentos sobre linguagens de programação e noções de arquitetura e engenharia de software, capacidade de solucionar problemas, raciocínio lógico e uma mentalidade orientada para resultados.</p>
+                <br>
 
             <h2>Niveis de hierarquia e Media salarial</h2>
 
@@ -28,11 +46,13 @@
             <li>Nível pleno R$ 7.750 a R$ 13.000</li>
             <li>Nível Sênior R$ 11.550 a R$ 19.350</li>
 
+                <br>
 
 <h2>Imagens da profissão</h2>
             <img src="download.jpg">
 
 
         </hgroup>
+    </div>
 </body>
 </html>
