--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
+
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Profissões de T.I </title>
-    <link rel="stylesheet" type="text/css"  href="_css/inicio.css">
-    <link rel="stylesheet" type="text/css"  href="_css/estilo.css">
+    <meta charset="UTF-8"/>
+    <link rel="stylesheet" type="text/css"  href="inicio.css">
 </head>
 
-<body>
+    <body>
 
-    <div id="interface">
+        <div id="interface">
 
-    <header id="cabecalho">
-        <hgroup>
-            <h1>PROFISSÕES DE T.I.</h1>
-        </hgroup>
+            <header id="cabecalho">
 
             <img id="icone" src="-ti-logo-.jpg"
-        width="300px"/>
+        width="200px"/>
+
+
 
         <nav id="menu">
+
             <h1>Menu Principal</h1>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -30,39 +30,51 @@
                 <li><a href="autor.html">Autor</a></li>
             </ul>
         </nav>
-    </header>
+            </header>
 
-        <section id="corpo">
+
 
         <article id="noticia-principal">
 
             <hgroup id="cabecalho-noticia-principal">
-                <h2>VAMOS AS PROFISSÕES DE T.I.</h2>
+                <h2>PROFISSÕES NA ÁREA  DE T.I.</h2>
             </hgroup>
 
+            <br>
    <h2>. Desenvolvedor de Softwares</h2>
         <p>Ele pode criar aplicativos, programas, sistemas e outras soluções de software para os mais variados fins e indústrias.</p>
-        <img src="download.jpg"> 
+        <img src="download.jpg">
 
             <aside id="lateral">
 
+                <br>
+                <br>
+                <br>
    <h2>. Arquiteto de Soluções</h2>
                 <p>Se optar pela carreira em arquitetura de aplicações, você trabalhará com o projeto e desenvolvimento dos principais componentes de aplicações tecnológicas, como interface de usuário, middleware, firmware e infraestrutura.</p>
         <img src="post_thumbnail-.jpg"
         width="250px"/>
             </aside>
 
+            <br>
+            <br>
+            <br>
     <h2>. Engenheiro de Softwares</h2>
         <p>O que a difere de profissionais de desenvolvimento e programação é que engenheiros e engenheiras de software se baseiam nos princípios da engenharia para desenvolver programas, aplicações e sistemas de computador.</p>
 
         <img src="engenharia-de-software.jpg"
         width="250px"/>
 
+            <br>
+            <br>
+            <br>
     <h2>. O Porque conhecer elas?</h2>
     <p>O diferencial, o profissional de TI consegue otimizar o tempo e os processos da empresa, elevando consequentemente a sua produtividade e eficácia. Nos dias atuais a principal característica do profissional de TI é o fato de seus conhecimentos irem além da tecnologia a nível operacional.
     T.I. também é muito importante, pois hoje em dia quase tudo depende da tecnologia.</p>
 
-
+                <br>
+            <br>
+            <br>
          <footer id="rodape">
         <p>Copyright 2023 - by Rodrigo Andrade de Lima<br>
             <a href="http://facebook.com/cursosemvideo" target="_blank">Facebook</a> |
@@ -73,6 +85,7 @@
 
         </article>
 
+
     </div>
 </body>
-    </html>
+</html>
