--- a/engesoft.html
+++ b/engesoft.html
@@ -3,40 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <title>Engenharia de Software</title>
-    <link rel="stylesheet" type="text/css"  href="_css/inicio.css">
+    <link rel="stylesheet" type="text/css"  href="engesoft.css">
 </head>
 
-    <script language="javascript" src="_javascript/funcoes.js"></script>
-
-        <img id="icone" src="-ti-logo-.jpg" width="250px"/>
-
 <body>
+           <div id="interface">
 
-            <h1>Profissões na área de T.I.</h1>
+            <header id="cabecalho">
 
-        <div class="menu">
+            <img id="icone" src="-ti-logo-.jpg"
+        width="200px"/>
+
+        <nav id="menu">
+
+            <h1>Menu Principal</h1>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="dessoftware.html">Desenvolvedor de Software</a></li>
                 <li><a href="engesoft.html">Engenheiro de Software</a></li>
-                <li><a href="arqusoft.html">Arquiteto de Software</a></li>
+                <li><a href="arqsoftware.html">Arquiteto de Soluções</a></li>
                 <li><a href="fale-conosco.html">Fale Conosco</a></li>
+                <li><a href="autor.html">Autor</a></li>
             </ul>
-        </div>
-
-    </header>
+        </nav>
+            </header>
 
         <h2>Engenheiro de Software</h2>
         <img src="images.jpg">
 
+               <br>
     <h3>. Atividades de Trabalho</h3>
 
 <p>O que a difere de profissionais de desenvolvimento e programação é que engenheiros e engenheiras de software se baseiam nos princípios da engenharia para desenvolver programas, aplicações e sistemas de computador.</p>
+
+               <br>
 
     <h3>. Conhecimentos Necessários</h3>
 
     <p>Além de conhecimentos específicos de linguagens de programação, ciência da computação, arquitetura de sistemas e estruturas de dados, você também precisará dispor de excelentes habilidades comunicativas, colaborativas e de liderança.</p>
 
+               <br>
    <h3> . Níveis de Hierarquia e Média salarial</h3>
 
    <li>Júnior: R$ 4.500 e R$ 5.000</li>
@@ -45,7 +51,9 @@
 
    <li> Sênior: R$ 10.000 a R$ 17.000 mas pode passar de R$ 30.000</li>
 
-<h3>. Imagens</h3>
+               <br>
+
+    <h3>. Imagens</h3>
     <img src="engenharia-de-software.jpg" width="300px">   
 
     <footer id="rodape">
