--- a/arqsoftware.html
+++ b/arqsoftware.html
@@ -28,6 +28,8 @@
         </nav>
             </header>
 
+          <article>
+
       <h2>Arquiteto de Soluções</h2>
         <img src="arquitetura-de-solucoes.jpg" width="300">
 
@@ -35,11 +37,11 @@
 
 <p>Se optar pela carreira em arquitetura de aplicações, você trabalhará com o projeto e desenvolvimento dos principais componentes de aplicações tecnológicas, como interface de usuário, middleware, firmware e infraestrutura.</p>
 
-<h3>. Conhecimentos Necessários</h3>
+<h2>. Conhecimentos Necessários</h2>
 
 <p>A profissão exige que você saiba trabalhar bem em equipe e tenha ótimas habilidades de comunicação, planejamento e até de gestão e liderança.</p>
 
-<h3>. Níveis de Hierarquia e Média salarial</h3>
+<h2>. Níveis de Hierarquia e Média salarial</h2>
 
     <li>Júnior: R$ 5.500,00</li>
 
@@ -47,8 +49,10 @@
 
     <li>Sênior: R$ 14.654,00</li>
 
-<h3>. Imagens</h3>
+<h2>. Imagens</h2>
     <img src="Arquiteto-de-solucoes.jpg1.png" width="300">
+
+          </article>
 
     <footer id="rodape">
         <p>Copyright 2023 - by Rodrigo Andrade de Lima<br>
@@ -58,5 +62,5 @@
     </footer>
 
 
-</body>
+    </body>
 </html>
