--- a/autor.html
+++ b/autor.html
@@ -32,6 +32,8 @@
         </nav>
             </header>
 
+        <article>
+
         <h2>. Autor</h2>
       <p>Bom eu sou Rodrigo, tenho 15 anos, curso T.I, e esse é o primeiro site que eu criei sozinho.</p>
 
@@ -41,6 +43,8 @@
     <h2>. E pra finalizar esse sou eu</h2>
       <img src="WhatsApp Image 2023-02-14 at 09.52.40.jpeg" width="300">
 
+        </article>
+
     <footer id="rodape">
         <p>Copyright 2023 - by Rodrigo Andrade de Lima<br>
             <a href="http://facebook.com/cursosemvideo" target="_blank">Facebook</a> |
@@ -49,5 +53,5 @@
     </footer>
 
 
-</body>
+    </body>
 </html>
