--- a/dessoftware.html
+++ b/dessoftware.html
@@ -12,7 +12,7 @@
         <header id="cabecalho">
 
     <img id="icone" src="-ti-logo-.jpg"
-    width="300px"/>
+    width="200px"/>
 
         <nav id="menu">
 <ul>
@@ -27,9 +27,9 @@
         </header>
 
 
-
+        <article>
         <hgroup>
-            <h1>Desenvolvedor de Software</h1>
+            <h2>Desenvolvedor de Software</h2>
                 <br>
 
             <h2>Atividades de Trabalho</h2>
@@ -45,7 +45,7 @@
             <li>Nível Júnior R$ 5.500 a R$ 7.950</li>
             <li>Nível pleno R$ 7.750 a R$ 13.000</li>
             <li>Nível Sênior R$ 11.550 a R$ 19.350</li>
-
+                </article>
                 <br>
 
 <h2>Imagens da profissão</h2>
