--- a/engesoft.html
+++ b/engesoft.html
@@ -28,22 +28,23 @@
         </nav>
             </header>
 
+        <article>
         <h2>Engenheiro de Software</h2>
         <img src="images.jpg">
 
                <br>
-    <h3>. Atividades de Trabalho</h3>
+    <h2>. Atividades de Trabalho</h2>
 
 <p>O que a difere de profissionais de desenvolvimento e programação é que engenheiros e engenheiras de software se baseiam nos princípios da engenharia para desenvolver programas, aplicações e sistemas de computador.</p>
 
                <br>
 
-    <h3>. Conhecimentos Necessários</h3>
+    <h2>. Conhecimentos Necessários</h2>
 
     <p>Além de conhecimentos específicos de linguagens de programação, ciência da computação, arquitetura de sistemas e estruturas de dados, você também precisará dispor de excelentes habilidades comunicativas, colaborativas e de liderança.</p>
 
                <br>
-   <h3> . Níveis de Hierarquia e Média salarial</h3>
+   <h2> . Níveis de Hierarquia e Média salarial</h2>
 
    <li>Júnior: R$ 4.500 e R$ 5.000</li>
 
@@ -53,8 +54,10 @@
 
                <br>
 
-    <h3>. Imagens</h3>
+    <h2>. Imagens</h2>
     <img src="engenharia-de-software.jpg" width="300px">   
+
+        </article>
 
     <footer id="rodape">
         <p>Copyright 2023 - by Rodrigo Andrade de Lima<br>
@@ -64,5 +67,5 @@
     </footer>
 
 
-</body>
+    </body>
 </html>
