--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 
 
-        <article id="noticia-principal">
+        <article>
 
             <hgroup id="cabecalho-noticia-principal">
                 <h2>PROFISSÕES NA ÁREA  DE T.I.</h2>
