--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8"/>
-    <link rel="stylesheet" type="text/css"  href="inicio.css">
+    <link rel="stylesheet" type="text/css"  href="dessoftware.css">
 </head>
 
     <body>
